public/styles/style.css
input[type=range] {
    -webkit-appearance: none;
    margin: 18px 0;
    width: 100%;
  }
  input[type=range]:focus {
    outline: none;
  }
  input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #ffccde;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
  }
  input[type=range]::-webkit-slider-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -14px;
  }
  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #ffccde;
  }
  input[type=range]::-moz-range-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #ffccde;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
  }
  input[type=range]::-moz-range-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
  }
  input[type=range]::-ms-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    background: transparent;
    border-color: transparent;
    border-width: 16px 0;
    color: transparent;
  }
  input[type=range]::-ms-fill-lower {
    background: #ffccde;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  }
  input[type=range]::-ms-fill-upper {
    background: #ffccde;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  }
  input[type=range]::-ms-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
  }
  input[type=range]:focus::-ms-fill-lower {
    background: #3071a9;
  }
  input[type=range]:focus::-ms-fill-upper {
    background: #367ebd;
  }


h1, p, li, label {
    color: white;
}
.container{
    background-color: black; 
    text-align: center;
}
button {
    color: black;
}
.top{
    margin-bottom: 5%;
}

li {
    width: 50%;
    list-style-type: none;
}

body {
    background: url("https://i.pinimg.com/originals/64/ed/d6/64edd6602a0772197f61915c99d20e85.jpg") no-repeat center center fixed;
    background-size: cover;
}

.form-slider {
    display: block;
    text-align: center;
    line-height: 150%;

}

.text-overflow {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 500px;
}

.chat form {
    width: 55%;
    margin: auto;
}

.chat ul {
    height: 10px;
}

.chat {
    margin-top: 100px;
    float: right;
    justify-content: center;
    height: 400px;
}

#users {
    text-align:center;
    float: right;
    box-shadow: 0 0 5px 5px #0ff;
    border-radius: 10%;
    width: 200px;
    height: 300px;
    margin-right: 10%;
    margin-bottom: 50px;
}

#users h3 {
    margin-left: 25%;
    color: #0ff;
    width:100px;
    margin-bottom: 25px;
}

#users li {
    margin-left: 10%;
}

.plate {
    float: left;
    background-color: #3B3C36;
    width: 700px;
    height: 625px;
    border-radius: 10%;
    padding-top: 5%;
    box-shadow: 0 0 5px 5px #0ff;
    margin-bottom: 50px;
}
.controls {
    text-align: center;
    padding-top: 2%;
}
.bar {
    padding-top: 1%;
    justify-content: center;
    display: flex;
}
.disk{
    justify-content: center;
    display: flex;
    align-items: center;
    text-align: center;
    margin: 20px;
}
.track-pic {
    /* animation: spinning-disk 10s infinite linear; */
    animation-iteration-count:infinite;
    animation-timing-function:linear;
    animation-name:spinning-disk;
    animation-duration:5s;
    box-shadow: 0px 0px 40px 20px #0ff;
    width: 400px;
    height: 400px;
    border-radius:50%;
    position: relative;
    z-index: 1;
}
.paused {
    animation-play-state: paused;
}
.border {
    height: 125px;
    width: 125px;
    background-color: black;
    border-radius: 50%;
    z-index: 2;
    position: absolute;
}
.ring {
    height: 100px;
    width: 100px;
    background-color: yellow;
    border-radius: 50%;
    z-index: 3;
    position: absolute;
}
.dot {
    height: 15px;
    width: 15px;
    background-color: white;
    border-radius: 50%;
    z-index: 4;
    position: absolute;
}
.arm {
    height: 300px;
    width: 300px;
    z-index: 5;
    left: 40%;
    top: 20%;
    position: absolute;
}

.search-results {
    margin-bottom: 75px;
    list-style:none;
}

.search-results a {
    text-decoration: none !important;
    color: inherit;
}

.search-results:hover {
    color:#000;
    text-decoration:none;
    cursor:pointer;
}

#login, #loggedin {
    display: none;
}

#texty {
    box-shadow: 0px 0px 5px 5px #0ff;
    border-radius: 5%;
    width: 400px;
    height: 300px;
    justify-content: center;
    float: right;
    margin-bottom: 10px;
}

#queue {
    list-style-type: none;
    padding: 0;
    overflow: hidden;
    width: 66%;
    margin-top: 5%;
}

ul#queue {
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
}

ul#queue li {
    display: inline;
}

#msg-window ul li {
    width: 100%;
}

@keyframes spinning-disk {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}

